# AsteroidDefense

./: .gitignore  Cargo.toml  HANDOFF.backup.md  HANDOFF.md  LICENSE  NOTICE  README.md
core/: Cargo.toml
core/examples/: probe_horizons.rs  probe_perturbers.rs  probe_sb441.rs  probe_sun_gm.rs  spike_geocenter.rs
core/src/: clock.rs  close_approach.rs  deflection.rs  elements.rs  ephemeris.rs  epoch.rs  geometry.rs  horizons.rs  integrator.rs  kernels.rs  lambert.rs  launch_vehicle.rs  lib.rs  mission.rs  perturber_field.rs  propagator.rs  scenario.rs  state.rs
core/src/forces/: mod.rs  point_mass.rs  relativity.rs  srp.rs  yarkovsky.rs
core/tests/: capstone_neo_vs_horizons.rs  element_state_roundtrip.proptest-regressions  element_state_roundtrip.rs
core/tests/fixtures/: apophis_flyby_1d.neo  apophis_flyby_1h.neo
godot/: asteroid.gdextension  asteroid.gdextension.uid  main.tscn  project.godot
godot/rust/: Cargo.toml
godot/rust/src/: lib.rs  mission_core.rs
godot/scripts/: boot.gd  boot.gd.uid  encounter.gd  encounter.gd.uid  hud.gd  hud.gd.uid  kernels.gd  kernels.gd.uid  main.gd  main.gd.uid  map2d.gd  map2d.gd.uid  orbit_camera.gd  orbit_camera.gd.uid  planner.gd  planner.gd.uid  sim.gd  sim.gd.uid  solar_system.gd  solar_system.gd.uid  tag_layer.gd  tag_layer.gd.uid  tier2_panel.gd  time_bar.gd  time_bar.gd.uid
godot/shaders/: crt.gdshader  crt.gdshader.uid  glow_line.gdshader  glow_line.gdshader.uid  starfield.gdshader  starfield.gdshader.uid
godot/tests/: _shot.gd  _tier2_shot.gd  test_gdext.gd  test_gdext.gd.uid  test_orrery.gd  test_orrery.gd.uid  test_sim.gd  test_sim.gd.uid
memory/: MEMORY.md  README.md  gdext-binding.md  git-workflow.md  godot-mcp-script-cache.md  godot-phase2-scaffold.md  godot-visual-layer.md  project-overview.md
pyref/: .gitignore  Dockerfile  README.md  SPIKE.md  fetch_horizons_neo.py  generate_assist_fixture.py  generate_kepler_fixture.py  requirements-hapsira.txt  requirements.txt  spike_assist_de441.py
validation/: Cargo.toml
validation/fixtures/: assist_tier1.json  kepler_two_body.json
validation/src/: lib.rs
validation/tests/: assist_reference.rs  dop853_adaptive.rs  free_invariants.proptest-regressions  free_invariants.rs  integrator_convergence.rs  kepler_reference.rs
viewer/: Cargo.toml
viewer/src/: lib.rs  main.rs  scenario.rs
