[workspace]
resolver = "2"
members = ["core", "viewer", "validation", "godot/rust"]

# pyref/ is a Python offline-oracle pipeline (hapsira, REBOUND, ASSIST) — it is
# deliberately NOT a Cargo member and must never appear in any Cargo.toml.

[workspace.package]
edition = "2021"
license = "LicenseRef-BNCL-1.0"
authors = ["Boyko Neov"]
repository = "https://github.com/BoykoNeov/AsteroidDefense"

[workspace.dependencies]
# Shared, version-pinned once here; member crates opt in via `.workspace = true`.
# Versions are filled by `cargo add` (verified against the registry), not by hand.
# Only deps used by more than one member live here — anise/hifitime are core-only,
# serde validation-only, the egui stack viewer-only, so those stay in-crate.
nalgebra = "0.35.0" # core dep; validation dev-dep
proptest = "1.11.0" # core + validation dev-deps
