[package]
name = "validation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
asteroid_core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[dev-dependencies]
proptest.workspace = true
# Vector3 algebra (cross/dot/norm) for the free-invariant helpers in
# tests/free_invariants.rs. Workspace-pinned so it matches the core's version.
nalgebra.workspace = true
