[package]
name = "asteroid_gdext"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

# The GDExtension binding: a C-ABI dynamic library Godot loads at runtime.
# Dependency flows ONE way — this crate depends on `asteroid_core`, never the
# reverse (HANDOFF §10: no renderer/UI type ever links into the core).
[lib]
crate-type = ["cdylib"]

[dependencies]
godot = "0.5.4"
asteroid_core = { path = "../../core" }
